@@ -28,10 +28,11 @@
 
 class MsgChannel;
 extern bool cleanup_cache( const std::string &basedir );
-extern size_t setup_env_cache(const std::string &basedir,
-                     std::string &native_environment, uid_t nobody_uid, gid_t nobody_gid);
+extern size_t setup_env_cache(const std::string &basedir, std::string &native_environment,
+                    uid_t nobody_uid, gid_t nobody_gid, const std::list<std::string> &extrafiles);
 Environments available_environmnents(const std::string &basename);
-extern bool native_env_uptodate();
+extern void save_compiler_timestamps(time_t &gcc_bin_timestamp, time_t &gpp_bin_timestamp, time_t &clang_bin_timestamp);
+bool compilers_uptodate(time_t gcc_bin_timestamp, time_t gpp_bin_timestamp, time_t clang_bin_timestamp);
 extern pid_t start_install_environment( const std::string &basename,
                             const std::string &target,
                             const std::string &name,
@@ -41,7 +42,7 @@ extern pid_t start_install_environment( const std::string &basename,
 extern size_t finalize_install_environment( const std::string &basename, const std::string& target,
         pid_t pid, gid_t nobody_gid );
 extern size_t remove_environment( const std::string &basedir, const std::string &env);
-extern size_t remove_native_environment( const std::string &basedir, const std::string &env );
+extern size_t remove_native_environment( const std::string &env );
 extern void chdir_to_environment( MsgChannel *c, const std::string &dirname, uid_t nobody_uid, gid_t nobody_gid );
 extern bool verify_env( MsgChannel *c, const std::string &basedir, const std::string& target,
                         const std::string &env, uid_t nobody_uid, gid_t nobody_gid );
